--- a/src/components/CarouselItem/styles.css
+++ b/src/components/CarouselItem/styles.css
@@ -47,3 +47,19 @@
   max-width:700px;
   width:100%;
 }
+
+:local(.select) {
+  margin-right: 10px;
+  border: 2px solid #eee;
+}
+
+:local(.price) {
+  margin-left:10px;
+}
+
+:local(.bar) {
+  display:flex;
+  flex-direction:row;
+  align-items: center;
+  justify-content: center;
+}
