--- a/src/components/CartItem/styles.css
+++ b/src/components/CartItem/styles.css
@@ -1,5 +1,8 @@
 :local(.basketItem) {
   display:block;
+  border-bottom:1px solid rgba(255,255,255,0.1);
+  padding-bottom:10px;
+  margin-bottom:10px;
 }
 
 :local(.title) {
@@ -13,4 +16,8 @@
 
 :local(.meta) {
   margin-top:10px;
+}
+
+:local(.remove) {
+  cursor:pointer;
 }
