--- a/src/global.css
+++ b/src/global.css
@@ -42,3 +42,7 @@ h1,h2,h3,h4,h5,h6 {
   border-top: 10px solid transparent!important;
   border-bottom: 10px solid transparent!important;
 }
+
+.carousel .slide {
+  background:transparent!important;
+}
