--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -6,6 +6,10 @@
   z-index:1000;
 }
 
+:global(.generic) :local(.footer) {
+  background:#000;
+}
+
 :local(.footer) :global(.item.active) {
   color:#fff!important;
   border-color:#fff!important;
