--- a/src/components/HowTo/styles.css
+++ b/src/components/HowTo/styles.css
@@ -1,3 +1,12 @@
 :local(.wrapper) {
   background:transparent;
+  padding:13px;
+}
+
+:local(.wrapper) h2 {
+  margin-bottom:15px;
+}
+
+:local(.content) {
+  font-size:16px;
 }
