--- a/src/global.css
+++ b/src/global.css
@@ -7,13 +7,18 @@ h1,h2,h3,h4,h5,h6 {
   margin:0;
 }
 
-.page {
+.page-default,
+.page-generic {
   min-height:100vh;
   background:#222;
   display: flex;
   justify-content: center;
   align-items: center;
 } 
+
+.page-generic .page-inner {
+  padding:70px 0;
+}
 
 .page-inner {
   width:100%;
